# stateless

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
crates/stateless/: Cargo.toml
crates/stateless/src/: error.rs  lib.rs  recover_block.rs  trie.rs  validation.rs  witness_db.rs
crates/tries/: Cargo.toml
crates/tries/src/: default.rs  error.rs  lib.rs  zeth.rs
crates/zeth-mpt/: Cargo.toml
crates/zeth-mpt/src/: lib.rs
crates/zeth-mpt/src/mpt/: children.rs  mod.rs  nibbles.rs  node.rs  orphan.rs  rkyv.rs  rlp.rs  serde.rs
scripts/: check_no_std.sh  run_ef_tests.sh  setup_ef_tests.sh
testing/ef-tests/: Cargo.toml
testing/ef-tests/src/: models.rs  result.rs
testing/ef-tests/src/cases/: blockchain_test.rs
