[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/stateless"
repository = "https://github.com/paradigmxyz/stateless"
exclude = [".github/"]

[workspace]
members = [
    "crates/stateless",
    "testing/ef-tests",
]
resolver = "2"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"

[workspace.dependencies]
# internal
stateless = { path = "crates/stateless" }

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-trie-sparse = { git = "https://github.com/paradigmxyz/reth", branch = "main", default-features = false }

# alloy
alloy-consensus = { version = "1.5", default-features = false }
alloy-eips = { version = "1.5", default-features = false }
alloy-genesis = { version = "1.5", default-features = false }
alloy-primitives = { version = "1.5", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rpc-types-debug = { version = "1.5", default-features = false }
alloy-trie = { version = "0.9", default-features = false }

# revm
revm = { version = "34.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database-interface = { version = "9.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }

# misc
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
rayon = "1.8"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
serde_with = { version = "3.16", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0", default-features = false }
walkdir = "2.5"
