[package]
name = "stateless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Stateless Ethereum block validation using execution witnesses"

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-genesis = { workspace = true, features = ["serde-bincode-compat"] }

# reth
reth-ethereum-consensus.workspace = true
reth-primitives-traits.workspace = true
reth-ethereum-primitives = { workspace = true, features = ["serde", "serde-bincode-compat"] }
reth-evm.workspace = true
reth-trie-common.workspace = true
reth-trie-sparse.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true

# revm
revm-bytecode.workspace = true
revm-database-interface.workspace = true
revm-state.workspace = true

# misc
thiserror.workspace = true
itertools.workspace = true
serde.workspace = true
serde_with.workspace = true
