[package]
name = "tries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Trie abstractions and implementations for stateless validation"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-trie.workspace = true
itertools.workspace = true
reth-trie-common.workspace = true
reth-trie-sparse.workspace = true
revm-bytecode.workspace = true
revm-database-interface.workspace = true
thiserror.workspace = true
zeth-mpt = { path = "../zeth-mpt" }
