[package]
name = "zeth-mpt"
edition = "2021"
version.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy-trie = { version = "0.9", default-features = false, features = ["ethereum"] }
alloy-rlp.workspace = true
alloy-primitives.workspace = true

arrayvec.workspace = true
bincode = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
rkyv = ["dep:rkyv", "dep:itertools"]
serde = [
    "dep:serde",
    "dep:bincode",
    "alloy-primitives/serde",
    "alloy-trie/serde",
]
rlp_serialize = ["dep:itertools"]
orphan = ["dep:thiserror"]
